# dslc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: clang-format.cmake
dslc/: dslc_main.cpp  main.cpp  scanner_main.cpp
scanner/: CMakeLists.txt
scanner/dfa/: DFA.cppm  DFAAcceptingState.cppm  DFAMatcher.cppm  DFASerializer.cppm
scanner/generator/: GenerationStatistics.cppm  Generator.cppm
scanner/generator/nfa/: MergedNFA.cppm  NFA.cppm  NFAEdge.cppm  NFANode.cppm  NFANodeFactory.cppm
scanner/generator/nfa-dfa-conversion/: PowerSetConstruction.cppm  StateSet.cppm  eClosure.cppm
scanner/generator/thompson-construction/: ThompsonConstructionVisitor.cppm
scanner/parser/: RegexParser.cppm
scanner/regex/: Concatenation.cppm  Kleene.cppm  Leaf.cppm  Optional.cppm  Plus.cppm  Regex.cppm  RegexNode.cppm  RegexNodeVisitor.cppm  Union.cppm
scanner/utilities/: SpecialSymbols.cppm
tests/: CMakeLists.txt  main_test.cpp
tests/data/: data.txt  regexes.txt
tests/scanner/dfa/: DFASerializerTest.cpp
tests/scanner/generator/nfa/: NFALockTest.cpp
tests/scanner/generator/nfa-dfa-conversion/: ScannerPipelineTests.cpp  StateSetTest.cpp
tests/scanner/regex/: RegexParserTest.cpp
